# mitm-toolkit

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: deploy-dashboard.yml
examples/: example_workflow.md
mitm_toolkit/: __init__.py  ai_analyzer.py  analyzer.py  capture_addon.py  cli.py  dashboard.py  dashboard_template.html  exporter.py  graphql_analyzer.py  mock_generator.py  models.py  plugins.py  replay.py  rpc_analyzer.py  session_manager.py  storage.py  test_generator.py  websocket_analyzer.py
mitm_toolkit/dashboard-ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
mitm_toolkit/dashboard-ui/src/: App-improved.tsx  App-old.tsx  App.tsx  index.css  types.ts
mitm_toolkit/dashboard-ui/src/components/: HarExport.tsx  HostList.tsx  KeyboardShortcuts.tsx  PerformanceMetrics.tsx  RequestDetails.tsx  RequestList.tsx  SecurityAnalyzer.tsx  Settings.tsx  StatsBar.tsx  SyntaxHighlight.tsx  (+1 more)
mitm_toolkit/static/: index.html
mitm_toolkit/static/assets/: index-B22c6Slm.css  index-B8p5LDH-.js  index-BDz3Vy4W.js  index-BEfUdKuY.js  index-B_Be3g7P.css  index-BhRBMkKz.js  index-C2jYJbfn.css  index-CAb7dehI.js  index-CS-GbOWk.css  index-CtG4CwlK.js  index-CzNhuBCI.css  index-D26Hjsmf.css  index-D5cDi_P7.css  index-DO33jesI.js  index-Ddf5w4Rl.js  index-DnUfwVMM.js  index-DzryAFJt.js  index-JZIMrZhJ.css  index-QQcG3mMS.css  index-RFx3K1nb.js  index-XBvNjD5R.js  index-c62h40vt.js  index-dvpqzSdd.css  index-ozv6Rhkg.css  index-vBC2YNzE.css
(+6 files in other folders)
